--- a/public/assets/css/main/home.sass
+++ b/public/assets/css/main/home.sass
@@ -23,28 +23,32 @@ body.home
 			.inner
 				margin: 0 $margin / 2
 				position: relative
-				h1
-					+font("xl")
-					left: 60px
-					line-height: 1.3
-					position: absolute
-					top: 40px
-				img
-					height: auto
-					opacity: .15
-					width: 100%
-				.description
-					+font("md")
-					left: 60px
-					position: absolute
-					text-transform: uppercase
-					top: 260px
-				.type
-					+font("sm", "mono")
-					left: 20px
-					position: absolute
-					text-transform: uppercase
-					top: 20px
+				overflow: hidden
+
+			h1
+				+font("lg")
+				left: 20px
+				line-height: 1.3
+				position: absolute
+				top: 40px
+				width: 90%
+			img
+				min-height: 100%
+				opacity: .15
+				min-width: 100%
+			.description
+				+font("md")
+				left: 60px
+				position: absolute
+				text-transform: uppercase
+				top: 260px
+				display: none
+			.type
+				+font("sm", "mono")
+				left: 20px
+				position: absolute
+				text-transform: uppercase
+				top: 20px
 
 			@each $section in $sections
 				$name:  nth($section, 1)
@@ -65,8 +69,9 @@ body.home
 
 		div.promo
 			border: $border-width solid $default
-			height: $promo-height
+			min-height: $promo-height
 			position: relative
+			margin-bottom: $margin
 			@include shadow()
 
 			@each $section in $sections
